[package]
name = "threshold"
version = "0.6.8"
edition = "2018"

description = "Threshold data structures"
keywords = ["threshold", "data-structures", "vector-clock"]
readme = "README.md"

authors = ["Vitor Enes <vitorenesduarte@gmail.com>"]

homepage = "https://github.com/vitorenesduarte/threshold-rs"
repository = "https://github.com/vitorenesduarte/threshold-rs.git"
documentation = "https://docs.rs/threshold"

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "vitorenesduarte/threshold-rs" }
coveralls = { repository = "vitorenesduarte/threshold-rs", branch = "master", service = "github" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.2"
rand = "0.7"
quickcheck = "0.8"
quickcheck_macros = "0.8"

[[bench]]
name = "threshold_bench"
harness = false
